tests/snapshots/render/dumb@commonmark-spec-214-link_reference_definitions.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/214-link_reference_definitions.md
snapshot_kind: text
---
Foo[1]
════════════════════════════════════════════════════════════════════════════════

▌ bar

[1]: /url
