tests/snapshots/render/dumb@commonmark-spec-225-paragraphs.snap
---
source: tests/render.rs
assertion_line: 111
expression: "render_to_string(markdown_file, &dumb_settings)"
input_file: tests/markdown/commonmark-spec/225-paragraphs.md
snapshot_kind: text
---
╭──────────────────────────────────────────────────────────────────────────────╮
│ aaa                                                                          │
╰──────────────────────────────────────────────────────────────────────────────╯

bbb
